sorting of homepage completed